// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card accepts className override 1`] = `
<View
  className="bg-white rounded-card p-5 border border-ink-200 shadow-sm bg-blue-50"
>
  <Text>
    Custom
  </Text>
</View>
`;

exports[`Card renders children with default styling 1`] = `
<View
  className="bg-white rounded-card p-5 border border-ink-200 shadow-sm "
>
  <Text>
    Hello
  </Text>
</View>
`;
